# datascience-projects

./: Cluster Visualization .ipynb  INV-ResNet.ipynb  PCCF.py  README.md  Word Embeddings.ipynb
Image_Recognition/: Ensembling with SKlearn.ipynb  Ensembling1.ipynb  INV-RESNET2.ipynb  INV-ResNet.ipynb  INV-V3.ipynb  INV-VGG.ipynb  README.md
Machine Learning - Titanic/: Analysis.ipynb  README.md
Misc/: README.md
MovieLens/: RNNs.ipynb
Natural_Language_Processing/: Glove Neural Network.ipynb  QUORA-Exploration.ipynb  README.md  Spacy_NLP.ipynb
Natural_Language_Processing/Detecting_Bullies/: 3-Scikit_learn_algorithms.ipynb  4-XGBoost.ipynb  ReadMe.md
Natural_Language_Processing/Quora/: README.md
Natural_Language_Processing/TwitterDisasters/: 1-Tweets from IDs-(to upload).ipynb  1-Tweets from IDs.ipynb  2 - Content Words-NLTK.ipynb  2 - Content Words.ipynb  README.md  filled_tweets.csv
Recommender_System/: DeepWideModel.ipynb  README.md
Recommender_System/Data/: LSTM_valid.csv  X_50_iter5000.npy
Style_Neural_Network/: Histogram Loss.ipynb  ReadMe.md  Style Transfer with Histogram Loss.ipynb  Style_Network_w_CoOccurence.ipynb  VGG16.py
ThinkBayes/: README.md
Timeseries/: README.md  fbprophet.ipynb
Timeseries/Exploration/: README.md  Timeseries_Analysis_1.ipynb  timeseries.py
computer_vision/crop_yield_prediction/: README.md  environment.yml  run.py
general_programming/interpreter_in_c++/: README.md  meson.build
general_programming/interpreter_in_c++/include/: ast.h  lexer.h  meson.build  parser.h  repl.h  token.h
general_programming/interpreter_in_c++/src/: ast.cpp  lexer.cpp  main.cpp  meson.build  parser.cpp  repl.cpp  token.cpp
general_programming/interpreter_in_c++/src/lexer/: lexer.cpp
general_programming/interpreter_in_c++/src/token/: token.cpp
general_programming/interpreter_in_c++/test/: meson.build  test_ast.cpp  test_lexer.cpp  test_parser.cpp
general_programming/interpreter_in_c++/test/lexer/: test_lexer.cpp
minitorch/: .gitignore  README.md  pytest.ini  requirements.txt  run_tests.py
misc/: PCCF.py  README.md  warp.py
recommender_system/: README.md  Visualizing Neural Net Outputs.ipynb
(+274 files in other folders)
